--- a/src/Today/today.css
+++ b/src/Today/today.css
@@ -1,34 +1,20 @@
-    .today--section {
-        margin-bottom: 40px;
-        padding: 0 50px;
-    }
-    .today--section h2 {
-        font-size: 20px;
-    }
-    .today--section__box {
-        background-color: white;
-        padding: 20px;
-        margin: 20px 0;
-        border-radius: 4px;
-        box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
-    }
-    .btc--section {
-        text-align: center;
-        border-right: 1px solid #DAE1E9;
-    }
-    .btc--section h5 {
-        font-size: 30px;
-    }
-    .eth--section {
-        text-align: center;
-        border-right: 1px solid #DAE1E9;
-    }
-    .eth--section h5 {
-        font-size: 30px;
-    }
-    .ltc--section {
-        text-align: center;
-    }
-    .ltc--section h5 {
-        font-size: 30px;
-    }
+body {
+  background: #f1f1f1;
+  /*padding:50px;*/
+}
+
+div#crypto-container {
+  background:white;
+  width: 70%;
+  margin: 0 auto 4px auto;
+  padding: 1em;
+  box-shadow: 1px 1px 0 lightgrey;
+}
+
+span.left {
+  font-weight: bold;
+}
+
+span.right {
+  float:right;
+}
